# diagrams-wxHaskell

./: LICENSE  diagrams-wxHaskell.cabal
samples/: Chart.lhs  Sample.hs  SquareLimit.lhs
src/Diagrams/Backend/: WX.hs
src/Diagrams/Backend/WX/: Internals.hs
