Name:                diagrams-wxHaskell
Version:             0.1
Synopsis:           backend for diagrams drawing EDSL for wxHaskell
Homepage:            http://projects.haskell.org/diagrams
License:             BSD3
License-file:        LICENSE
Author:              Nathan Huesken
Maintainer:          Nathan Huesken <nathan.huesken@posteo.de>
Bug-reports:         
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules:     Diagrams.Backend.WX
                       Diagrams.Backend.WX.Internals
  Hs-source-dirs:      src
  Build-depends:       base >= 4.2 && < 4.7,
                       mtl >= 2.0 && < 2.2,
                       diagrams-core >= 0.7 && < 0.8,
                       diagrams-lib >= 0.7 && < 0.8,
                       vector,
                       wx,
                       wxcore

Executable             diagramsWxHaskell-Sample
  Hs-source-dirs:      samples
  Main-is:             Sample.hs
  Other-modules:       SquareLimit, Chart
  Build-depends:       base >= 4.2 && < 4.7,
                       diagrams-wxHaskell,
                       diagrams-core >= 0.7 && < 0.8,
                       diagrams-lib >= 0.7 && < 0.8,
                       SVGFonts,
                       split,
                       wx,
                       wxcore
